--- a/AutomationInterview/test-output/index.html
+++ b/AutomationInterview/test-output/index.html
@@ -25,7 +25,7 @@
       <span class="top-banner-title-font">Test results</span>
       <button id="button" class="button">Switch Retro Theme</button> <!-- button -->
       <br/>
-      <span class="top-banner-font-1">1 suite, 2 failed tests</span>
+      <span class="top-banner-font-1">1 suite, 1 failed test</span>
     </div> <!-- top-banner-root -->
     <div class="navigator-root">
       <div class="navigator-suite-header">
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-FlipkartSuite" class="navigator-link ">
-                    <span>C:\Users\ASUS\eclipse-workspace\AutomationInterview\testng.xml</span>
+                    <span>C:\Users\ASUS\git\repository\AutomationInterview\testng.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">2 methods, 2 failed,   </span>
+                    <span class="method-stats">2 methods, 1 failed,   1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title failed">Failed methods</span>
@@ -106,12 +106,21 @@
                         <a href="#" panel-name="suite-FlipkartSuite" title="testCases.AddToCart" class="method navigator-link" hash-for-method="Validate_Add_to_Cart">Validate_Add_to_Cart</a> <!-- method navigator-link -->
                       </span>
                       <br/>
+                    </div> <!-- method-list-content failed suite-FlipkartSuite -->
+                  </li>
+                  <li>
+                    <span class="method-list-title passed">Passed methods</span>
+                    <span class="show-or-hide-methods passed">
+                      <a href="#" panel-name="suite-FlipkartSuite" class="hide-methods passed suite-FlipkartSuite"> (hide)</a> <!-- hide-methods passed suite-FlipkartSuite -->
+                      <a href="#" panel-name="suite-FlipkartSuite" class="show-methods passed suite-FlipkartSuite"> (show)</a> <!-- show-methods passed suite-FlipkartSuite -->
+                    </span>
+                    <div class="method-list-content passed suite-FlipkartSuite">
                       <span>
-                        <img src="failed.png" width="3%"/>
+                        <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-FlipkartSuite" title="testCases.SearchProducts" class="method navigator-link" hash-for-method="verifySortOrder">verifySortOrder</a> <!-- method navigator-link -->
                       </span>
                       <br/>
-                    </div> <!-- method-list-content failed suite-FlipkartSuite -->
+                    </div> <!-- method-list-content passed suite-FlipkartSuite -->
                   </li>
                 </ul>
               </div> <!-- suite-section-content -->
@@ -140,9 +149,9 @@ For documentation on this error, please visit: https://www.selenium.dev/document
 Build info: version: &apos;4.25.0&apos;, revision: &apos;8a8aea2337&apos;
 System info: os.name: &apos;Windows 11&apos;, os.arch: &apos;amd64&apos;, os.version: &apos;10.0&apos;, java.version: &apos;19.0.2&apos;
 Driver info: org.openqa.selenium.chrome.ChromeDriver
-Command: [0d683c87939fb015fd5b9a8f1cf834c5, findElement {using=xpath, value=//span[@class=&quot;VU-ZEz&quot;]}]
-Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 129.0.6668.72, chrome: {chromedriverVersion: 129.0.6668.89 (951c0b97221f..., userDataDir: C:\Users\ASUS\AppData\Local...}, fedcm:accounts: true, goog:chromeOptions: {debuggerAddress: localhost:50744}, networkConnectionEnabled: false, pageLoadStrategy: normal, platformName: windows, proxy: Proxy(), se:cdp: ws://localhost:50744/devtoo..., se:cdpVersion: 129.0.6668.72, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:extension:minPinLength: true, webauthn:extension:prf: true, webauthn:virtualAuthenticators: true}
-Session ID: 0d683c87939fb015fd5b9a8f1cf834c5
+Command: [db6041e5d50f97f4dddd1db8528ca2c4, findElement {value=//span[@class=&quot;VU-ZEz&quot;], using=xpath}]
+Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 129.0.6668.72, chrome: {chromedriverVersion: 129.0.6668.89 (951c0b97221f..., userDataDir: C:\Users\ASUS\AppData\Local...}, fedcm:accounts: true, goog:chromeOptions: {debuggerAddress: localhost:53708}, networkConnectionEnabled: false, pageLoadStrategy: normal, platformName: windows, proxy: Proxy(), se:cdp: ws://localhost:53708/devtoo..., se:cdpVersion: 129.0.6668.72, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:extension:minPinLength: true, webauthn:extension:prf: true, webauthn:virtualAuthenticators: true}
+Session ID: db6041e5d50f97f4dddd1db8528ca2c4
 	at org.openqa.selenium.remote.ErrorCodec.decode(ErrorCodec.java:167)
 	at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.decode(W3CHttpResponseCodec.java:138)
 	at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.decode(W3CHttpResponseCodec.java:50)
@@ -166,9 +175,9 @@ Session ID: 0d683c87939fb015fd5b9a8f1cf834c5
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
           </div> <!-- suite-FlipkartSuite-class-failed -->
-          <div class="suite-FlipkartSuite-class-failed">
+          <div class="suite-FlipkartSuite-class-passed">
             <div class="main-panel-header rounded-window-top">
-              <img src="failed.png"/>
+              <img src="passed.png"/>
               <span class="class-name">testCases.SearchProducts</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
@@ -177,19 +186,14 @@ Session ID: 0d683c87939fb015fd5b9a8f1cf834c5
                   <a name="verifySortOrder">
                   </a> <!-- verifySortOrder -->
                   <span class="method-name">verifySortOrder</span>
-                  <div class="stack-trace">java.lang.AssertionError: expected [true] but found [false]
-	at testCases.SearchProducts.verifySortOrder(SearchProducts.java:36)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
-... Removed 32 stack frames
-</div> <!-- stack-trace -->
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-FlipkartSuite-class-failed -->
+          </div> <!-- suite-FlipkartSuite-class-passed -->
         </div> <!-- panel FlipkartSuite -->
         <div panel-name="test-xml-FlipkartSuite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\ASUS\eclipse-workspace\AutomationInterview\testng.xml</span>
+            <span class="header-content">C:\Users\ASUS\git\repository\AutomationInterview\testng.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -243,16 +247,16 @@ data.addRows(2);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'verifySortOrder')
 data.setCell(0, 2, 'testCases.SearchProducts')
-data.setCell(0, 3, 25086);
+data.setCell(0, 3, 25610);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'Validate_Add_to_Cart')
 data.setCell(1, 2, 'testCases.AddToCart')
-data.setCell(1, 3, 23668);
+data.setCell(1, 3, 23744);
 window.suiteTableData['FlipkartSuite']= { tableData: data, tableDiv: 'times-div-FlipkartSuite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 48 seconds</span>
+              <span class="suite-total-time">Total running time: 49 seconds</span>
               <div id="times-div-FlipkartSuite">
               </div> <!-- times-div-FlipkartSuite -->
             </div> <!-- times-div -->
@@ -287,28 +291,26 @@ return data;
                 <img src="failed.png">
                 </img>
                 <span class="method-name">Validate_Add_to_Cart</span>
-                <span class="method-start">3245 ms</span>
+                <span class="method-start">3791 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">26921 ms</span>
+                <span class="method-start">27545 ms</span>
               </div> <!-- configuration-class after -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">testCases.SearchProducts</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">setUp</span>
-                <span class="method-start">27003 ms</span>
+                <span class="method-start">27618 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <img src="failed.png">
-                </img>
                 <span class="method-name">verifySortOrder</span>
-                <span class="method-start">29522 ms</span>
+                <span class="method-start">30270 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">54610 ms</span>
+                <span class="method-start">55882 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
